[tool.poetry]
name = "celiacs-need-food-too"
version = "0.1.0"
description = ""
authors = ["Maxwell Farver"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3.22"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
gunicorn = "^20.0.4"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
